--- a/views/signup-page.handlebars
+++ b/views/signup-page.handlebars
@@ -1,17 +1,19 @@
-  <section class="d-flex justify-content-around">
-    <form style="width: 30rem">
+  <section class="d-flex justify-content-around mt-3">
+    <form class="signupform" style="width: 30rem">
       <div class="form-group">
         <label for="inputUsername">Username</label>
-        <input type="email" class="form-control shadow-none" id="inputUsername" aria-describedby="emailHelp" placeholder="New Username">
+        <input type="text" class="form-control shadow-none" id="inputUsername" placeholder="New Username">
       </div>
       <div class="form-group">
         <label for="inputEmail">Email</label>
-        <input type="email" class="form-control shadow-none" id="inputEmail" placeholder="Email address">
+        <input type="email" class="form-control shadow-none" id="inputEmail" aria-describedby="emailHelp" placeholder="Email address">
       </div>
       <div class="form-group">
         <label for="inputPassword">Password</label>
         <input type="password" class="form-control shadow-none" id="inputPassword" placeholder="New Password">
       </div>
-      <button type="submit" class="btn-dark mt-1">Sign Up</button>
+      <button type="submit" class="btn border-dark mt-2 shadow-sm" id="signUpBtn">Submit</button>
     </form>
 </section>
+
+<script src="./js/usercreate.js"></script>
