--- a/views/login-page.handlebars
+++ b/views/login-page.handlebars
@@ -1,16 +1,18 @@
-<section class="d-flex justify-content-around">
-    <form style="width: 30rem">
+<section class="d-flex justify-content-around mt-4">
+    <form class="signinform" style="width: 30rem">
       <div class="form-group">
         <label for="inputUsername">Username</label>
-        <input type="email" class="form-control shadow-none" id="inputUsername" aria-describedby="emailHelp" placeholder="Username">
+        <input type="text" class="form-control shadow-none" id="inputUsername" aria-describedby="emailHelp" placeholder="Username">
       </div>
       <div class="form-group">
         <label for="inputPassword">Password</label>
         <input type="password" class="form-control shadow-none" id="inputPassword" placeholder="Password">
       </div>
-      <button type="submit" class="btn-dark mt-1">Sign In</button>
-      <div class="form-group">
+      <button type="submit" class="btn border-dark mt-2" id="signInBtn">Sign In</button>
+      <div class="form-group mt-2">
         <a href="/signup" class="text-reset">No account? Sign up here!</a>
       </div>
     </form>
 </section>
+
+<script src="./js/login.js"></script>
