--- a/views/login-page.handlebars
+++ b/views/login-page.handlebars
@@ -1,5 +1,5 @@
 <section class="d-flex justify-content-around mt-4">
-    <form style="width: 30rem">
+    <form class="form login-form" style="width: 30rem">
       <div class="form-group">
         <label for="inputUsername">Username</label>
         <input type="text" class="form-control shadow-none" id="inputUsername" aria-describedby="emailHelp" placeholder="Username">
@@ -8,7 +8,7 @@
         <label for="inputPassword">Password</label>
         <input type="password" class="form-control shadow-none" id="inputPassword" placeholder="Password">
       </div>
-      <button type="button" class="btn border-dark mt-2" id="signInBtn">Sign In</button>
+      <button type="submit" class="btn border-dark mt-2">Sign In</button>
       <div class="form-group mt-2">
         <a href="/signup" class="text-reset">No account? Sign up here!</a>
       </div>
