--- a/views/signup-page.handlebars
+++ b/views/signup-page.handlebars
@@ -1,5 +1,5 @@
   <section class="d-flex justify-content-around mt-3">
-    <form class="signupform" style="width: 30rem">
+    <form class="form signup-form" style="width: 30rem">
       <div class="form-group">
         <label for="inputUsername">Username</label>
         <input type="text" class="form-control shadow-none" id="inputUsername" placeholder="New Username">
@@ -12,7 +12,7 @@
         <label for="inputPassword">Password</label>
         <input type="password" class="form-control shadow-none" id="inputPassword" placeholder="New Password">
       </div>
-      <button type="submit" class="btn border-dark mt-2 shadow-sm" id="signUpBtn">Submit</button>
+      <button type="submit" class="btn border-dark mt-2 shadow-sm">Submit</button>
     </form>
 </section>
 
