--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,20 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Omega Gaming</title>
+    <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">  
+      
   </head>
   <body>
-    <header class="border-bottom border-dark shadow-sm">
+    <header class="border-bottom border-dark shadow-lg">
       <ul class="nav justify-content-center">
         <li class="nav-item px-5">
-          <a class="nav-link text-reset mt-3" aria-current="/dashboard" href="#">DASHBOARD</a>
+          <a class="nav-link mt-3" aria-current="/dashboard" href="#">DASHBOARD</a>
         </li>
         <li class="nav-item px-5">
-          <a class="nav-link text-reset" id="logo" href="/">&Omega;</a>
+          <a class="nav-link" id="logo" href="/">&Omega;</a>
         </li>
         <li class="nav-item px-5">
                 {{!-- If user is logged in show sign out link --}}
@@ -25,7 +26,7 @@
           <button id="signout" class="btn mt-3">SIGN OUT</button>
                 {{!-- If user is not logged in show sign in link --}}
           {{else}}
-          <a class="nav-link text-reset mt-3" href="/login">SIGN IN</a>
+          <a class="nav-link mt-3" href="/login">SIGN IN</a>
         {{/if}}
         </li>
       </ul>
