Added dashboard template and debugging comment associations

--- a/views/blog-page.handlebars
+++ b/views/blog-page.handlebars
@@ -1,5 +1,5 @@
   <section class="row d-flex justify-content-center">
-    <div class="card m-3" style="width: 30rem;">
+    <div class="card m-3" style="width: 50rem;">
       <div class="card-body">
         {{#if loggedIn}}<h6 class="card-subtitle mb-2 text-muted">Posted by {{blog.user.username}} on {{formatDate blog.createdAt}}</h6>
         <h5 class="card-title">{{blog.title}}</h5>
@@ -9,7 +9,7 @@
   </section>
   <section>
     <form class="row d-flex justify-content-center">
-      <div class="form-group" style="width: 25rem">
+      <div class="form-group" style="width: 37rem">
         <label for="exampleFormControlTextarea1">Add a comment</label>
         <textarea class="form-control shadow-none" id="exampleFormControlTextarea1" rows="3"></textarea>
         <button type="submit" class="btn-dark mt-1">Post</button>
@@ -20,3 +20,6 @@
       </div>
     {{/if}}
   </section>
+  {{#each comments as |comment|}}
+  {{> comment-cards}}
+  {{/each}}
