--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,8 +2,12 @@
     font-family: 'Special Elite', cursive;
 }
 
+/* header {
+    background-color: black !important;
+} */
+
 #logo {
-    font-size: 2rem;
+    font-size: 2.3rem;
 }
 
 .nav-link {
@@ -13,3 +17,16 @@
 .nav-link:hover {
     text-shadow: 1px 1px 1px grey;
 }
+
+.form-control:active, .form-control:hover, .form-control:focus {
+    border-color: black !important;
+    outline: none !important;
+}
+
+/* .main-body {
+    width: 100%;
+    height: 90vh;
+    background-image: url('../../dark_wood.png');
+    background-repeat: repeat;
+
+} */
