--- a/views/login-page.handlebars
+++ b/views/login-page.handlebars
@@ -1,8 +1,8 @@
-<section class="d-flex justify-content-around mt-4">
+<section class="d-flex justify-content-around mt-5">
     <form class="form login-form" style="width: 30rem">
       <div class="form-group">
         <label for="inputUsername">Username</label>
-        <input type="text" class="form-control shadow-none" id="inputUsername" aria-describedby="emailHelp" placeholder="Username">
+        <input type="text" class="form-control shadow-none" autocomplete="off" id="inputUsername" aria-describedby="emailHelp" placeholder="Username">
       </div>
       <div class="form-group">
         <label for="inputPassword">Password</label>
