--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
     <header class="border-bottom border-dark shadow-lg">
       <ul class="nav justify-content-center">
         <li class="nav-item px-5">
-          <a class="nav-link mt-3" aria-current="/dashboard" href="#">DASHBOARD</a>
+          <a class="nav-link mt-3" aria-current="/dashboard" href="/dashboard">DASHBOARD</a>
         </li>
         <li class="nav-item px-5">
           <a class="nav-link" id="logo" href="/">O&Omega;G</a>
