--- a/views/partials/comment-cards.handlebars
+++ b/views/partials/comment-cards.handlebars
@@ -1,7 +1,7 @@
 <section class="d-flex justify-content-center">
     <div class="card m-3" style="width: 35rem;">
-      <div class="card-body">
-        <h6 class="card-subtitle mb-2 text-muted"><span class="text-warning">&Omega;</span>{{user.username}} | {{formatDate createdAt}}</h6>
+      <div class="card-body  shadow-sm">
+        <h6 class="card-subtitle mb-2 text-muted">{{user.username}} | {{formatDate createdAt}}</h6>
         <p class="card-text">{{text}}</p>
       </div>
     </div>
