--- a/views/partials/blog-cards.handlebars
+++ b/views/partials/blog-cards.handlebars
@@ -2,6 +2,7 @@
     <div class="card-body">
         <h5 class="card-title">{{title}}</h5>
         <h6 class="card-subtitle mb-2 text-muted">Posted by {{user.username}} on {{formatDate createdAt}}</h6>
-        <a href="/blog/{{id}}" class="card-link text-reset">View Blog</a>
+        <div class="row">
+        </div><a href="/blog/{{id}}" class="card-link text-reset">View Blog</a>
     </div>
 </div>
