--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,9 @@
 <section class="row d-flex justify-content-center">
     <div class="card">
+      {{#if loggedIn}}
   <div class="card-body">
-    <h4 class="text-center">Welcome to your Omega Dashboard {{user.username}}</h4>
+    
+    <h4 class="text-center">Welcome to your Omega Dashboard {{username}}</h4>
   </div>
 </div>
 </section>
@@ -12,6 +14,8 @@
     {{#each blogs as |blog|}}
       {{> blog-cards}}
     {{/each}}
+{{else}}
+<h5 class="card-title text-danger">You must be signed in to view blog posts!</h5>
+</div>
+{{/if}}
 </section>
-
-<script src="./js/createblog.js"></script>
