--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
     <header class="border-bottom border-dark shadow-lg">
       <ul class="nav justify-content-center">
         <li class="nav-item px-5">
-          <a class="nav-link mt-3" aria-current="/dashboard" href="/dashboard">DASHBOARD</a>
+          <a class="nav-link mt-3" href="/dashboard">DASHBOARD</a>
         </li>
         <li class="nav-item px-5">
           <a class="nav-link" id="logo" href="/">O&Omega;G</a>
@@ -34,7 +34,7 @@
     {{{ body }}}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     {{#if loggedIn}}
-    <script src="./js/logout.js"></script>
+    <script src="/js/logout.js"></script>
     {{/if}}
   </body>
 </html>
