Polishing homepage UI

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,21 +1,18 @@
-<section class="row d-flex justify-content-center">
-    <div class="card">
+
       {{#if loggedIn}}
-  <div class="card-body">
-    
-    <h4 class="text-center">Welcome to your Omega Dashboard {{username}}</h4>
+  <div class="card-body mt-3">
+    <h4 class="text-center">Welcome to your Dashboard {{user.username}}</h4>
+    <p class="text-center">This is where you can manage and view your blog posts.</p>
   </div>
-</div>
-</section>
-<section class="d-flex justify-content-center">
-  <button type="button" class="btn border-dark mt-2">New Blog</button>
-</section>
 <section class="row d-flex justify-content-center">
     {{#each blogs as |blog|}}
       {{> blog-cards}}
     {{/each}}
+</div>
+</section>
+<section class="d-flex justify-content-center">
+  <a href="/newblog" class="card-link text-reset mt-2"><h5>New Blog</h5></a>
+</section>
 {{else}}
 <h5 class="card-title text-danger">You must be signed in to view blog posts!</h5>
-</div>
 {{/if}}
-</section>
