--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,14 +23,10 @@
     outline: none !important;
 }
 
-/* .main-body {
+.footer {
+    display: flex;
+    justify-content: space-around;
+    position: fixed;
+    bottom: 0;
     width: 100%;
-    height: 90vh;
-    background-image: url('../../dark_wood.png');
-    background-repeat: repeat;
-
-} */
-
-.editBlog {
-    /* add display: block; when edit button is clicked */
 }
