--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,6 @@
+    <div class="d-flex justify-content-center mt-3">
+      <h3>Welcome to Omega Gaming!</h3>
+    </div>
     <section class="row d-flex justify-content-center">
     {{#each blogs as |blog|}}
       {{> blog-cards}}
