--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,8 +35,8 @@
     
   <div class="text-center mt-5 footer">
     <a class="nav-link text-center" href="https://github.com/Ccooper9893">Github</a>
-    <h6>© 2020 Copyright: Omega LLC</h6>
-    <a class="nav-link text-center" href="https://www.linkedin.com/in/cody-cooper-3a951a24b/">Linkedin</a>
+    <h6 class="my-0">© 2020 Copyright: Omega LLC</h6>
+    <a class="nav-link text-center mt-0" href="https://www.linkedin.com/in/cody-cooper-3a951a24b/">Linkedin</a>
   </div>
   <!-- Copyright -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
