--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,12 @@
     font-family: 'Special Elite', cursive;
 }
 
+body {
+    margin: 0;
+    box-sizing: border-box;
+    width: 100%;
+    min-height: 100vh;
+}
 /* header {
     background-color: black !important;
 } */
@@ -23,8 +29,8 @@
     outline: none !important;
 }
 
-#footer {
-    position: fixed;
+.footer {
+    position:relative;
     bottom: 0;
     width: 100%;
  }
