--- a/views/blog-edit.handlebars
+++ b/views/blog-edit.handlebars
@@ -7,7 +7,8 @@
   <form class="form login-form" style="width: 50rem">
     <div class="form-group">
       <label for="updateBlogTitle">Title</label>
-      <input type="text" class="form-control shadow-none" autocomplete="off" id="updateBlogTitle" placeholder="{{blog.title}}">
+      <textarea type="text" class="form-control shadow-none" id="updateBlogTitle">{{blog.title}}</textarea>
+      {{!-- <input type="text" class="form-control shadow-none" autocomplete="off" id="updateBlogTitle" placeholder="{{blog.title}}"> --}}
       <small>Must be less than 100 characters.</small>
     </div>
     <div class="form-group mt-2">
