--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
           <a class="nav-link mt-3" href="/dashboard">DASHBOARD</a>
         </li>
         <li class="nav-item px-5">
-          <a class="nav-link" id="logo" href="/">O&Omega;G</a>
+          <a class="nav-link" id="logo" href="/">&Omega;</a>
         </li>
         <li class="nav-item px-5">
                 {{!-- If user is logged in show sign out link --}}
