Added comment delete feature and organized controller routes

--- a/views/blog-page.handlebars
+++ b/views/blog-page.handlebars
@@ -6,7 +6,7 @@
         <br><p class="card-text">{{blog.blog_body}}</p>
       </div>
       {{#if isOwner}}
-        <a href="/edit/{{blog.id}}" id="editBtn" class="card-link text-reset">Edit</a>
+        <a href="/blog/edit/{{blog.id}}" id="editBtn" class="card-link text-reset">Edit</a>
     {{/if}}
     </div>
   </section>
