--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -11,7 +11,7 @@
 </div>
 </section>
 <section class="d-flex justify-content-center">
-  <a href="/newblog" class="card-link text-reset mt-2"><h5>New Blog</h5></a>
+  <a href="/blog/new" class="card-link text-reset mt-2"><h5>New Blog</h5></a>
 </section>
 {{else}}
 <h5 class="card-title text-danger">You must be signed in to view blog posts!</h5>
