--- a/views/partials/user-blogs.handlebars
+++ b/views/partials/user-blogs.handlebars
@@ -2,7 +2,7 @@
     <div class="card-body">
         <h5 class="card-title">{{title}}</h5>
         <h6 class="card-subtitle mb-2 text-muted">Posted on {{formatDate createdAt}}</h6>
-        <a href="/blog/{{id}}" class="card-link text-reset">Edit</a>
+        <a href="/blog/edit/{{id}}" class="card-link text-reset">Edit</a>
     </div>
 </div>
 {{#each comments as |comment|}}
