--- a/views/blog-create.handlebars
+++ b/views/blog-create.handlebars
@@ -1,5 +1,5 @@
 <section class="container mt-3">
-  <h4 class="row justify-content-center">Create Your Blog</h4>
+  <h3 class="text-center"><u>Create your Blog</u></h3>
   <a class="row justify-content-center text-reset" href="https://vancouverea.org/responsible-blogging/" target="_blank">Guidelines</a>
 </section>
 
@@ -14,7 +14,7 @@
       <label for="newBlogBody">Body</label>
       <textarea type="text" class="form-control shadow-none" id="newBlogBody" placeholder="I can't read your thoughts, type them for me!"></textarea>
     </div>
-    <button id="newBlogBtn" class="btn border-dark mt-2">Post</button>
+    <button id="newBlogBtn" class="btn border-dark mt-2" style="background-color: #d3d3d3">Post</button>
   </form>
 </main>
 
