--- a/views/blog-edit.handlebars
+++ b/views/blog-edit.handlebars
@@ -15,7 +15,7 @@
       <label for="updateBlogBody">Body</label>
       <textarea type="text" class="form-control shadow-none" id="updateBlogBody">{{blog.blog_body}}</textarea>
     </div>
-    <button id="updateBlogBtn" class="btn border-dark mt-2">Update</button>
+    <button id="updateBlogBtn" class="btn border-dark mt-2" style="background-color: #d3d3d3">Update</button>
   </form>
 </main>
 
