--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
     <div class="d-flex justify-content-center mt-3">
-      <h3>Welcome to Omega Gaming!</h3>
+      <h2><u>Welcome to Omega Gaming!</u></h2>
     </div>
     <section class="row d-flex justify-content-center">
     {{#each blogs as |blog|}}
