--- a/views/login-page.handlebars
+++ b/views/login-page.handlebars
@@ -8,7 +8,7 @@
         <label for="inputPassword">Password</label>
         <input type="password" class="form-control shadow-none" id="inputPassword" placeholder="Password">
       </div>
-      <button type="submit" class="btn border-dark mt-2">Sign In</button>
+      <button type="submit" class="btn border-dark mt-2" style="background-color: #d3d3d3">Sign In</button>
       <div class="form-group mt-2">
         <a href="/signup" class="text-reset">No account? Sign up here!</a>
       </div>
