--- a/views/blog-page.handlebars
+++ b/views/blog-page.handlebars
@@ -1,7 +1,16 @@
   <section class="row d-flex justify-content-center">
     <div class="card m-3 shadow-lg" style="width: 50rem;">
       <div class="card-body">
-        <h6 class="card-subtitle mb-2 text-muted">Posted by {{blog.user.username}} on {{formatDate blog.createdAt}}</h6>
+        <div class="row">
+          <div class="col-6">
+            <h6 class="float-left col-8">Posted by {{blog.user.username}} on {{formatDate blog.createdAt}}</h6>
+          </div>
+          <div class="col-6 d-flex justify-content-end">
+            {{#if isOwner}}
+            <a style="cursor: pointer;" id="deleteBlog"><img src="/images/icons/trashcanIcon.png" id="{{blog.id}}" style="width: 0.8rem;"></a>
+            {{/if}}
+          </div>
+        </div>
         <h5 class="card-title">{{blog.title}}</h5>
         <br><p class="card-text">{{blog.blog_body}}</p>
       </div>
@@ -16,7 +25,7 @@
       <div class="form-group" style="width: 37rem">
         <label for="comment">Add a comment</label>
         <textarea class="form-control shadow-sm" id="comment" rows="3"></textarea>
-        <button id="commentBtn" class="btn border-dark mt-2">Comment</button>
+        <button id="commentBtn" class="btn border-dark mt-2" style="background-color: #d3d3d3">Comment</button>
       </div>
     </form>
   </section>
@@ -25,3 +34,6 @@
   {{/each}}
 
   <script src="/js/comment.js"></script>
+  {{#if isOwner}}
+  <script src="/js/deleteblog.js"></script>
+  {{/if}}
