--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,37 +8,31 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
       
   </head>
   <body>
-    <header class="border-bottom border-dark shadow-lg">
+    <header class="border-bottom border-dark shadow-lg" style="background-color: #2d2d2d">
       <ul class="nav justify-content-center">
         <li class="nav-item px-5">
-          <a class="nav-link mt-3" href="/dashboard">DASHBOARD</a>
+          <a class="nav-link mt-3 text-light" href="/dashboard">DASHBOARD</a>
         </li>
         <li class="nav-item px-5">
-          <a class="nav-link" id="logo" href="/">&Omega;</a>
+          <a class="nav-link text-light" id="logo" href="/">&Omega;</a>
         </li>
         <li class="nav-item px-5">
                 {{!-- If user is logged in show sign out link --}}
         {{#if loggedIn}}
-          <button id="signout" class="btn mt-3">SIGN OUT</button>
+          <button class="btn btn-reset text-light mt-2" id="signout" id="logoutBtn"><a class="nav-link text-light">SIGN OUT</a></button>
                 {{!-- If user is not logged in show sign in link --}}
           {{else}}
-          <a class="nav-link mt-3" href="/login">SIGN IN</a>
+          <a class="nav-link mt-3 text-light" href="/login">SIGN IN</a>
         {{/if}}
         </li>
       </ul>
     </header>
     {{{ body }}}
     
-  <div class="text-center mt-5 footer">
-    <a class="nav-link text-center" href="https://github.com/Ccooper9893">Github</a>
-    <h6 class="my-0">© 2020 Copyright: Omega LLC</h6>
-    <a class="nav-link text-center mt-0" href="https://www.linkedin.com/in/cody-cooper-3a951a24b/">Linkedin</a>
-  </div>
-  <!-- Copyright -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     {{#if loggedIn}}
     <script src="/js/logout.js"></script>
