--- a/views/partials/user-blogs.handlebars
+++ b/views/partials/user-blogs.handlebars
@@ -1,6 +1,14 @@
 <div class="card m-3 shadow" style="width: 18rem;">
     <div class="card-body">
-        <h5 class="card-title">{{title}}</h5>
+        <div class="row">
+          <div class="col-6">
+            <h5 class="card-title">{{title}}</h5>
+          </div>
+          <div class="col-6 d-flex justify-content-end">
+            <a class="deleteBlog" style="cursor: pointer;"><img src="/images/icons/trashcanIcon.png" id="{{id}}" style="width: 0.8rem;"></a>
+          </div>
+        </div>
+
         <h6 class="card-subtitle mb-2 text-muted">Posted on {{formatDate createdAt}}</h6>
         <a href="/blog/edit/{{id}}" class="card-link text-reset">Edit</a>
     </div>
