--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,30 @@
 * {
     font-family: 'Kanit', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    min-height: 100vh;
 }
 
 body {
-    margin: 0;
     box-sizing: border-box;
     width: 100%;
-    min-height: 100vh;
-    background-image: linear-gradient(to bottom, #e2e2e2, #b1b1b1, #828282, #555555, #2d2d2d);
+    height: 100%;
 }
-/* header {
-    background-color: black !important;
-} */
+
+section {
+    width: 100%;
+}
+
+form {
+    width: 100%;
+}
+
+header {
+    width: 100%;
+}
 
 #logo {
     font-size: 2.3rem;
@@ -32,4 +45,11 @@ a:hover {
 .form-control:active, .form-control:hover, .form-control:focus {
     border-color: black !important;
     outline: none !important;
+}
+
+footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    background-color: #2d2d2d;
 }
