--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
       
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <header class="border-bottom border-dark shadow-lg" style="background-color: #2d2d2d">
       <ul class="nav justify-content-center">
         <li class="nav-item px-5">
@@ -33,7 +33,7 @@
     </header>
     {{{ body }}}
 
-    <footer class="text-center text-light">
+    <footer class="text-center text-light mt-auto">
       2023 Copyright: Omega Blogs
     </footer>
     
