--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,29 +1,11 @@
 * {
     font-family: 'Kanit', sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    min-height: 100vh;
 }
 
 body {
     box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-}
-
-section {
-    width: 100%;
-}
-
-form {
-    width: 100%;
-}
-
-header {
-    width: 100%;
+    width: 100vw;
+    min-height: 100vh;
 }
 
 #logo {
@@ -47,9 +29,11 @@ a:hover {
     outline: none !important;
 }
 
+.row {
+    --bs-gutter-x: 0rem !important;
+}
+
 footer {
-    position: absolute;
     width: 100%;
-    bottom: 0;
     background-color: #2d2d2d;
 }
