--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,7 @@
     <div class="d-flex justify-content-center mt-3">
-      <h2><u>Welcome to Omega Gaming!</u></h2>
+      <h3><u>Welcome to Omega Blogs!</u></h3>
     </div>
+    <p class="text-center">Featured Blog Posts</p>
     <section class="row d-flex justify-content-center">
     {{#each blogs as |blog|}}
       {{> blog-cards}}
