--- a/views/partials/user-blogs.handlebars
+++ b/views/partials/user-blogs.handlebars
@@ -10,7 +10,7 @@
         </div>
 
         <h6 class="card-subtitle mb-2 text-muted">Posted on {{formatDate createdAt}}</h6>
-        <a href="/blog/edit/{{id}}" class="card-link text-reset">Edit</a>
+        <a href="/blog/edit/{{id}}" class="card-link text-reset my-2 mx-2">Edit</a>
     </div>
 </div>
 {{#each comments as |comment|}}
