--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,8 @@
     <div class="d-flex justify-content-center mt-3">
-      <h3><u>Welcome to Omega Blogs!</u></h3>
+      <h3><u>Omega Blogs</u></h3>
     </div>
     <p class="text-center">Featured Blog Posts</p>
-    <section class="row d-flex justify-content-center">
+    <section class="row d-flex justify-content-center mx-3">
     {{#each blogs as |blog|}}
       {{> blog-cards}}
     {{/each}}
