--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,24 +3,25 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Omega Gaming</title>
+    <title>Omega Blogs</title>
+    <link rel="icon" type="image/x-icon" href="/images/icons/omegaIcon.png">
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap" rel="stylesheet">
       
   </head>
   <body class="d-flex flex-column min-vh-100">
     <header class="border-bottom border-dark" style="background-color: #2d2d2d">
-      <ul class="nav justify-content-center">
-        <li class="nav-item px-5">
+      <ul class="row nav justify-content-center">
+        <li class="col-lg-2 col-md-4 col-sm-3 nav-item text-center">
           <a class="nav-link mt-3 text-light" href="/dashboard">DASHBOARD</a>
         </li>
-        <li class="nav-item px-5">
+        <li class="col-lg-2 col-md-4 col-sm-3 nav-item text-center">
           <a class="nav-link text-light" id="logo" href="/">&Omega;</a>
         </li>
-        <li class="nav-item px-5">
+        <li class="col-lg-2 col-md-4 col-sm-3 nav-item text-center">
                 {{!-- If user is logged in show sign out link --}}
         {{#if loggedIn}}
           <a class="nav-link text-light mt-3" style="cursor: pointer;" id="signout">SIGN OUT</a>
@@ -31,8 +32,9 @@
         </li>
       </ul>
     </header>
+    <div class="mx-3">
     {{{ body }}}
-
+</div>
     <footer class="text-center text-light mt-auto">
       2023 Copyright: Omega Blogs
     </footer>
