--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap" rel="stylesheet">
       
   </head>
-  <body class="d-flex flex-column min-vh-100">
+  <body class="d-flex flex-column justify-content-center min-vh-100">
     <header class="border-bottom border-dark" style="background-color: #2d2d2d">
       <ul class="row nav justify-content-center">
         <li class="col-lg-2 col-md-4 col-sm-3 nav-item text-center">
