Centered edit blog page

--- a/views/blog-create.handlebars
+++ b/views/blog-create.handlebars
@@ -3,7 +3,7 @@
   <a class="row justify-content-center text-reset" href="https://vancouverea.org/responsible-blogging/" target="_blank">Guidelines</a>
 </section>
 
-<main class="d-flex justify-content-around mt-3">
+<main class="d-flex justify-content-center mt-3">
   <form class="form login-form" style="width: 50rem">
     <div class="form-group">
       <label for="newBlogTitle">Title</label>
