--- a/views/blog-create.handlebars
+++ b/views/blog-create.handlebars
@@ -1,7 +1,7 @@
-<section class="container mt-3">
+<div class="container mt-3">
   <h3 class="text-center"><u>Create your Blog</u></h3>
   <a class="row justify-content-center text-reset" href="https://vancouverea.org/responsible-blogging/" target="_blank">Guidelines</a>
-</section>
+</div>
 
 <main class="d-flex justify-content-center mt-3">
   <form class="form login-form" style="width: 50rem">
