--- a/views/blog-page.handlebars
+++ b/views/blog-page.handlebars
@@ -5,19 +5,19 @@
           <div class="col-10">
             <h6 class="float-left col-8">Posted by {{blog.user.username}} on {{formatDate blog.createdAt}}</h6>
           </div>
-          <div class="col-1 d-flex justify-content-end">
-            {{#if isOwner}}
-            <a href="/blog/edit/{{blog.id}}" id="editBtn" class="card-link text-reset"><img src="/images/icons/editIcon.png" style="width: 2rem;"></a>
-            {{/if}}
-          </div>
           <div class="col-1 d-flex justify-content-center">
             {{#if isOwner}}
-            <a style="cursor: pointer;" id="deleteBlog"><img src="/images/icons/trashcanIcon.png" id="{{blog.id}}" style="width: 1.3rem;"></a>
+            <a style="cursor: pointer;" id="deleteBlog"><img src="/images/icons/trashcanIcon.png" id="{{blog.id}}" style="width: 1.6rem;"></a>
             {{/if}}
         </div>
         <h5 class="card-title">{{blog.title}}</h5>
         <br><p class="card-text">{{blog.blog_body}}</p>
       </div>
+                <div>
+            {{#if isOwner}}
+            <a href="/blog/edit/{{blog.id}}" id="editBtn" class="card-link text-reset"><img src="/images/icons/editIcon.png" style="width: 2.5rem;"></a>
+            {{/if}}
+          </div>
     </div>
   </section>
   
