--- a/views/partials/blog-cards.handlebars
+++ b/views/partials/blog-cards.handlebars
@@ -4,6 +4,6 @@
         <h5 class="card-title">{{title}}</h5>
         <div class="row">
         </div>
-        <a href="/blog/{{id}}" class="card-link text-reset">&#10061; View Blog</a>
+        <a href="/blog/{{id}}" class="card-link text-reset" style="font-size: 1rem;">&#10061; View Blog</a>
     </div>
 </div>
