Centered blog edit page

--- a/views/blog-edit.handlebars
+++ b/views/blog-edit.handlebars
@@ -1,4 +1,4 @@
-<section class="container mt-3">
+<section class="d-flex justify-content-center mt-3">
   <h4 class="row justify-content-center">Update Your Blog</h4>
   <a class="row justify-content-center text-reset" href="https://vancouverea.org/responsible-blogging/" target="_blank">Guidelines</a>
 </section>
