Updated blog edit page

--- a/views/blog-edit.handlebars
+++ b/views/blog-edit.handlebars
@@ -1,7 +1,7 @@
 <section class="d-flex justify-content-center mt-3">
-  <h4 class="row justify-content-center">Update Your Blog</h4>
-  <a class="row justify-content-center text-reset" href="https://vancouverea.org/responsible-blogging/" target="_blank">Guidelines</a>
+  <h4 class="">Update Your Blog</h4>
 </section>
+<a class="text-reset d-flex justify-content-center" href="https://vancouverea.org/responsible-blogging/" target="_blank">Guidelines</a>
 
 <main class="d-flex justify-content-around mt-3">
   <form class="form login-form" style="width: 50rem">
